--- a/src/main/resources/templates/admin/admin/list.html
+++ b/src/main/resources/templates/admin/admin/list.html
@@ -31,7 +31,7 @@
 		<input type="hidden" id="path" th:value="${app_path }" />
 	    <div class="ibox float-e-margins">
 			<div class="ibox-title">
-	            <h5>文章列表<small>（<a th:href="@{toUpdate}">新增</a>）</small> </h5>
+	            <h5>用户列表<small>（<a th:href="@{toUpdate}">新增</a>）</small> </h5>
 	            <div class="ibox-tools">
 	                <a class="collapse-link" title="折叠">
 	                    <i class="fa fa-chevron-up"></i>
@@ -68,6 +68,7 @@
 	    <script th:src="@{/js/plugins/dataTables/jquery.dataTables.js}" src="js/plugins/dataTables/jquery.dataTables.js"></script>
 	    <script th:src="@{/js/plugins/dataTables/dataTables.bootstrap.js}" src="js/plugins/dataTables/dataTables.bootstrap.js"></script>
 	    <script th:src="@{/js/content.min.js?v=1.0.0}" src="js/content.min.js?v=1.0.0"></script>
+	    <script type="text/javascript" src="http://tajs.qq.com/stats?sId=9051096" charset="UTF-8"></script>
 	    
 	    <!-- BT Js -->
 	    <script th:src="@{/plugins/bootstrap-table/dist/bootstrap-table.js}" src="plugins/bootstrap-table/dist/bootstrap-table.js"></script>
@@ -77,7 +78,7 @@
 	    <script th:src="@{/js/plugins/sweetalert/sweetalert.min.js}" src="js/plugins/sweetalert/sweetalert.min.js"></script>
 	    
 		<script type="text/javascript">
-		var path = $("#path").val() + "/art/lists";
+		var path = $("#path").val() + "/admin/lists";
 		 $("#table").bootstrapTable({ // 对应table标签的id
 		      url: path, // 获取表格数据的url
 		      toolbar: '#toolbar', //工具按钮用哪个容器
@@ -111,21 +112,21 @@
 		              checkbox: true, // 显示一个勾选框
 		              align: 'center' // 居中显示
 		          }, {
-		              field: 'title',
-		              title: '标题',
+		              field: 'id', // 返回json数据中的name
+		              title: 'ID', // 表格表头显示文字
+		              width: '5%', // 定义列的宽度，单位为像素px
+		              align: 'center', // 左右居中
+		              valign: 'middle' // 上下居中
+		          }, {
+		              field: 'name',
+		              title: '名称',
 		              width: '20%', // 定义列的宽度，单位为像素px
 		              align: 'center',
 		              valign: 'middle'
 		          }, {
-		              field: 'typese',
-		              title: '类型',
-		              width: '5%', // 定义列的宽度，单位为像素px
-		              align: 'center',
-		              valign: 'middle'
-		          }, {
-		              field: 'createTime',
-		              title: '创建时间',
-		              width: '10%', // 定义列的宽度，单位为像素px
+		              field: 'password',
+		              title: '密码',
+		              width: '20%', // 定义列的宽度，单位为像素px
 		              align: 'center',
 		              valign: 'middle'
 		          }, {
@@ -155,7 +156,7 @@
 		
 		 
 		function update(id){
-			window.location.href = $("#path").val() + "/art/toUpdate?id=" + id; 
+			window.location.href = $("#path").val() + "/admin/toUpdate?id=" + id; 
 		}
 		
 		function del(id){
@@ -168,7 +169,7 @@
 		        confirmButtonText: "删除",
 		        closeOnConfirm: false
 		    }, function () {
-		    	var url = $("#path").val() + "/art/del";
+		    	var url = $("#path").val() + "/admin/del";
 		    	$.get(url,{'id':id,},function(result){
 	                if(result > 0){
 	                	swal("删除成功！", "您已经永久删除了这条信息。", "success");
