--- a/src/main/resources/templates/admin/admin/update.html
+++ b/src/main/resources/templates/admin/admin/update.html
@@ -29,8 +29,8 @@
 	            <div class="col-sm-12">
 	                <div class="ibox float-e-margins">
 	                    <div class="ibox-title">
-	                        <h5 th:if="${label.id} eq '0' ">新增标签<small>（编辑）</small></h5>
-	                        <h5 th:if="${label.id} ne '0' ">更新标签<small>（编辑）</small></h5>
+	                        <h5 th:if="${admin.id} eq '0' ">新增管理员<small>（编辑）</small></h5>
+	                        <h5 th:if="${admin.id} ne '0' ">更新管理员<small>（编辑）</small></h5>
 	                        <div class="ibox-tools">
 	                            <a class="collapse-link" title="折叠">
 	                                <i class="fa fa-chevron-up"></i>
@@ -46,31 +46,37 @@
 	                            </a>
 	                        </div>
 	                    </div>
-	                    
 	                    <div class="ibox-content">
-	                        <form th:method="post" th:action="@{/label}" class="form-horizontal">
+	                        <form th:method="post" th:action="@{/admin}" class="form-horizontal">
 	                        	<div class="form-group">
 	                                <label class="col-sm-2 control-label">编号</label>
 	                                <div class="col-sm-10">
-	                                    <input disabled="" class="form-control" type="text" th:value="${label.id}">
-	                                    <input class="form-control" type="hidden"  name="id" th:value="${label.id}">
+	                                    <input disabled="" class="form-control" type="text" th:value="${admin.id}">
+	                                    <input class="form-control" type="hidden"  name="id" th:value="${admin.id}">
 	                                </div>
 	                            </div>
                                 <div class="hr-line-dashed"></div>
 	                            <div class="form-group">
-	                                <label class="col-sm-2 control-label">标签名称</label>
+	                                <label class="col-sm-2 control-label">用户名</label>
 	
 	                                <div class="col-sm-10">
-	                                    <input type="text" class="form-control" name="name" th:value="${label.name}" >
+	                                    <input type="text" class="form-control" name="name" th:value="${admin.name}" >
+	                                </div>
+	                            </div>
+	                            <div class="hr-line-dashed"></div>
+	                            <div class="form-group">
+	                                <label class="col-sm-2 control-label">密码</label>
+	                                <div class="col-sm-10">
+	                                    <input type="text" class="form-control" id="pw1" name="password" th:value="${admin.password}" >
 	                                </div>
 	                            </div>
 	                            
 	                            <div class="hr-line-dashed"></div>
 	                            <div class="form-group">
-	                                <label class="col-sm-2 control-label">排序（越小越排前）</label>
+	                                <label class="col-sm-2 control-label">描述</label>
 	
 	                                <div class="col-sm-10">
-	                                    <input type="text" class="form-control" name="sort" th:value="${label.sort}" >
+	                                    <input type="text" placeholder="描述信息" class="form-control" name="descM" th:value="${admin.descM}">
 	                                </div>
 	                            </div>
 	                            
@@ -96,6 +102,7 @@
 	    <script>
 	        $(document).ready(function(){$(".i-checks").iCheck({checkboxClass:"icheckbox_square-green",radioClass:"iradio_square-green",})});
 	    </script>
+	    <script type="text/javascript" src="http://tajs.qq.com/stats?sId=9051096" charset="UTF-8"></script>
 	    
 	</body>
 
