--- a/src/main/resources/templates/admin/role/update.html
+++ b/src/main/resources/templates/admin/role/update.html
@@ -29,8 +29,8 @@
 	            <div class="col-sm-12">
 	                <div class="ibox float-e-margins">
 	                    <div class="ibox-title">
-	                        <h5 th:if="${label.id} eq '0' ">新增标签<small>（编辑）</small></h5>
-	                        <h5 th:if="${label.id} ne '0' ">更新标签<small>（编辑）</small></h5>
+	                        <h5 th:if="${role.id} eq '0' ">新增角色<small>（编辑）</small></h5>
+	                        <h5 th:if="${role.id} ne '0' ">更新角色<small>（编辑）</small></h5>
 	                        <div class="ibox-tools">
 	                            <a class="collapse-link" title="折叠">
 	                                <i class="fa fa-chevron-up"></i>
@@ -46,31 +46,43 @@
 	                            </a>
 	                        </div>
 	                    </div>
-	                    
 	                    <div class="ibox-content">
-	                        <form th:method="post" th:action="@{/label}" class="form-horizontal">
+	                        <form th:method="post" th:action="@{/role}" class="form-horizontal">
 	                        	<div class="form-group">
 	                                <label class="col-sm-2 control-label">编号</label>
 	                                <div class="col-sm-10">
-	                                    <input disabled="" class="form-control" type="text" th:value="${label.id}">
-	                                    <input class="form-control" type="hidden"  name="id" th:value="${label.id}">
+	                                    <input disabled="" class="form-control" type="text" th:value="${role.id}">
+	                                    <input type="hidden" name="createTime" th:value="${role.createTime}">
+	                                    <input type="hidden" name="updateTime" th:value="${role.updateTime}">
+	                                    <input type="hidden" name="id" th:value="${role.id}">
 	                                </div>
 	                            </div>
                                 <div class="hr-line-dashed"></div>
 	                            <div class="form-group">
-	                                <label class="col-sm-2 control-label">标签名称</label>
+	                                <label class="col-sm-2 control-label">角色名称</label>
 	
 	                                <div class="col-sm-10">
-	                                    <input type="text" class="form-control" name="name" th:value="${label.name}" >
+	                                    <input type="text" class="form-control" name="name" th:value="${role.name}" >
+	                                </div>
+	                            </div>
+	                            <div class="hr-line-dashed"></div>
+	                            <div class="form-group">
+	                                <label class="col-sm-2 control-label">描述</label>
+	
+	                                <div class="col-sm-10">
+	                                    <input type="text" placeholder="描述信息" class="form-control" name="descM" th:value="${role.descM}">
 	                                </div>
 	                            </div>
 	                            
 	                            <div class="hr-line-dashed"></div>
 	                            <div class="form-group">
-	                                <label class="col-sm-2 control-label">排序（越小越排前）</label>
+	                                <label class="col-sm-2 control-label">状态</label>
 	
 	                                <div class="col-sm-10">
-	                                    <input type="text" class="form-control" name="sort" th:value="${label.sort}" >
+	                                    <select class="form-control m-b" name="statuses">
+                                        <option value="1">启用 1</option>
+                                        <option value="0">锁定 0</option>
+                                    </select>
 	                                </div>
 	                            </div>
 	                            
@@ -96,6 +108,7 @@
 	    <script>
 	        $(document).ready(function(){$(".i-checks").iCheck({checkboxClass:"icheckbox_square-green",radioClass:"iradio_square-green",})});
 	    </script>
+	    <script type="text/javascript" src="http://tajs.qq.com/stats?sId=9051096" charset="UTF-8"></script>
 	    
 	</body>
 
