--- a/src/main/resources/templates/admin/art/list.html
+++ b/src/main/resources/templates/admin/art/list.html
@@ -123,6 +123,12 @@
 		              align: 'center',
 		              valign: 'middle'
 		          }, {
+		              field: 'admin.aliasName',
+		              title: '作者',
+		              width: '5%', // 定义列的宽度，单位为像素px
+		              align: 'center',
+		              valign: 'middle'
+		          }, {
 		              field: 'createTime',
 		              title: '创建时间',
 		              width: '10%', // 定义列的宽度，单位为像素px
@@ -131,7 +137,7 @@
 		          }, {
 		              field: 'descM',
 		              title: '描述',
-		              width: '45%', // 定义列的宽度，单位为像素px
+		              width: '40%', // 定义列的宽度，单位为像素px
 		              align: 'center',
 		              valign: 'middle'
 		          }, {
