--- a/src/main/resources/templates/admin/schedules/index.html
+++ b/src/main/resources/templates/admin/schedules/index.html
@@ -25,6 +25,29 @@
 	    <!-- Sweet Alert -->
     	<link th:href="@{/css/plugins/sweetalert/sweetalert.css}" href="css/plugins/sweetalert/sweetalert.css" rel="stylesheet">
 	    <style type="text/css">
+	    	/*定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸*/
+			::-webkit-scrollbar
+			{
+			    width: 3px;
+			    height: 3px;
+			}
+			 
+			/*定义滚动条轨道 内阴影+圆角*/
+			::-webkit-scrollbar-track
+			{
+			    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+			    border-radius: 2px;
+			    background-color: white;
+			}
+			 
+			/*定义滑块 内阴影+圆角*/
+			::-webkit-scrollbar-thumb
+			{
+			    border-radius: 2px;
+			    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+			    background-color: blue;
+			}
+	    	
 	    	.calendar{
 	    		width: 100%;
 	    	}
@@ -34,6 +57,8 @@
 	    	}
 	    	.calendar td{
 	    		height: 120px;
+	    		min-width: 100px;
+	    		max-width: 100px;
 	    	}
 	    	.calendar_Head{
 	    		text-align: center;
@@ -43,6 +68,66 @@
 	    	.calendar_btn{
 	    		border:0;
 	    		background:0;
+	    	}
+	    	.bigDiv{
+		    	height: 100%;
+	    	}
+	    	.topDiv{
+		    	height: 20%;
+	    	}
+	    	.buttonDiv{
+	    		height: 80%;
+	    		max-height: 120px;
+	    	}
+	    	.buttonDivScroll{
+	    		height: 100%;
+	    	}
+	    	.buttonDivScrollYes{
+	    		height: 100%;
+	    		overflow: scroll;
+	    		overflow-x: hidden;
+	    	}
+	    	.buttonDivScrollSmall{
+	    		height: 60px;
+	    		margin-top: 5px;
+	    		margin-left: 0px;
+	    	}
+	    	.smallAdd{
+	    		width: 5%;
+	    		height: 100%;
+	    		float: left;
+	    		background-color: red;
+	    	}
+	    	.smallContent{
+	    		width: 95%;
+	    		height: 100%;
+	    		float: right;
+	    		background-color: #ccc;
+	    	}
+	    	.smallContentDiv{
+	    		width: 95%;
+	    		height: 95%;
+	    		margin-left: 2.5%;
+	    		margin-right: 2.5%;
+	    		margin-top: 2.5%;
+	    	}
+	    	.topDiv1{
+		    	width: 70%;
+		    	float: left;
+	    	}
+	    	.topDiv2{
+		    	width: 30%;
+		    	float: right;
+	    	}
+	    	.topDiv2Add{
+	    		width: 20px;
+	    		height: 20px;
+	    		float: right;
+	    		margin-right: 12px;
+	    		color: green;
+	    		font-size: 32px;
+	    		line-height: 20px;
+	    		cursor: pointer;
 	    	}
 	    </style>
 	</head>
@@ -87,6 +172,7 @@
 	    <script th:src="@{/js/plugins/sweetalert/sweetalert.min.js}" src="js/plugins/sweetalert/sweetalert.min.js"></script>
 	    
 		<script type="text/javascript">
+		var path = $("#path").val() + "/schedule/getCurrentMonthSchedules";
 		//获取时间
 		var date = new Date();
 		var y = date.getFullYear();
@@ -99,91 +185,165 @@
 		//生成日历
 		loadcalendar(document.body);
 
-		function loadcalendar(dom,month,year){
-		dom.innerHTML = '';
-		var tab = document.createElement("table");
-		tab.className = "calendar";
-		var date = new Date();
-		var y = year || date.getFullYear();
-		var m = month || _m;
-
-		//console.log(m);
-		var firstDay = new Date(y,m,1).getDay();
-		var numRow = Math.ceil((firstDay + monthArr[m]) / 7);
-		tab.setAttribute("border","1");
-		var calendarStr = "",dayID;
-		for(var i = 0;i < numRow;i++){
-		calendarStr += "<tr>";
-		for(var j = 0;j < 7;j++){
-		dayID = 7*i + j -firstDay + 1;
-		if(dayID <= 0 || dayID > monthArr[m]){dayID=''};
-		dayID == d && m == date.getMonth()?calendarStr += "<td class='active'>" + dayID + "</td>":calendarStr += "<td>" + dayID + "</td>";
-		};
-		calendarStr += "</tr>";
-		}
-		//console.log(calendarStr);
-		tab.innerHTML = "<caption><div class='calendar_Head'><button id='reduce2' class='calendar_btn'>--</button><button id='reduce' class='calendar_btn'>-</button><button class='calendar_btn'>" + y + "年" + (parseInt(m) + parseInt(1)) + "月</button><button id='add' class='calendar_btn'>+</button><button id='add2' class='calendar_btn'>++</button>" +  "</div></caption><th>日</th><th>一</th><th>二</th><th>三</th><th>四</th><th>五</th><th>六</th>" + calendarStr;
-		//将日历加入body中
-		dom.appendChild(tab);
+		function loadcalendar(dom,month,year)
+		{
+			
+			$.get(path,function(result){
+				if(result.message == "success" && result.msg == "success"){
+					var data = JSON.parse(result.data);
+					dom.innerHTML = '';
+					var tab = document.createElement("table");
+					tab.className = "calendar";
+					var date = new Date();
+					var y = year || date.getFullYear();
+					var m = month || _m;
+			
+					var firstDay = new Date(y,m,1).getDay();
+					var numRow = Math.ceil((firstDay + monthArr[m]) / 7);
+					tab.setAttribute("border","1");
+					var calendarStr = "",dayID;
+					for(var i = 0;i < numRow;i++)
+					{
+						calendarStr += "<tr>";
+						for(var j = 0;j < 7;j++)
+						{
+							dayID = 7 * i + j - firstDay + 1;
+							if(dayID <= 0 || dayID > monthArr[m]){ dayID = '' };
+							var divBig = "<div class='bigDiv'>";
+							var top = "<div class='topDiv'><div class='topDiv1'>" + dayID + "</div><div class='topDiv2'><div class='topDiv2Add' id='topDiv2Add' name=" + dayID + ">+</div></div></div>";
+							var buttonDivScrollSmallDiv = "";
+							if(dayID != ''){
+								var currentDayData = data[parseInt(dayID) - 1].schedules;
+								if(currentDayData.length > 0){
+									buttonDivScrollSmallDiv = "<div class='buttonDivScrollYes'>";
+									for(var k = 0;k < currentDayData.length;k++) {
+										var id = currentDayData[k].id;
+										var content = currentDayData[k].title + " " + currentDayData[k].runTime.split(" ")[1];
+										buttonDivScrollSmallDiv = buttonDivScrollSmallDiv + 
+										"<div class='buttonDivScrollSmall'><div class='smallAdd' name=" + id + "></div><div class='smallContent'><div class='smallContentDiv'>" + content + "</div></div></div>";
+									}
+									buttonDivScrollSmallDiv = buttonDivScrollSmallDiv + "</div>";
+								}
+								
+							}
+							var button = "<div class='buttonDiv'><div class='buttonDivScroll'>" + 
+								buttonDivScrollSmallDiv +
+								"</div></div>";
+							dayID == d && m == date.getMonth() ? 
+									calendarStr += "<td class='active'>" + top + button + "</div></td>"
+									:
+									calendarStr += "<td>" + top + button + "</div></td>";
+						}
+						
+						calendarStr += "</tr>";
+					}
+					//console.log(calendarStr);
+					tab.innerHTML = "<caption><div class='calendar_Head'><button id='reduce2' class='calendar_btn'>--</button><button id='reduce' class='calendar_btn'>-</button><button class='calendar_btn'>" + y + "年" + (parseInt(m) + parseInt(1)) + "月</button><button id='add' class='calendar_btn'>+</button><button id='add2' class='calendar_btn'>++</button>" +  "</div></caption><th>日</th><th>一</th><th>二</th><th>三</th><th>四</th><th>五</th><th>六</th>" + calendarStr;
+					//将日历加入body中
+					dom.appendChild(tab);
+				}
+				else{
+					alert("获取数据失败");
+				}
+		    });
+			
 		};
 
 		//判断是否是闰年
-		function getFubuary(year){
-		if(year % 4){
-		return 28;
-		}else{
-		if(year % 100){
-		return 29
-		}else{
-		return 28;
-		}
-		}
+		function getFubuary(year)
+		{
+			if(year % 4)
+			{
+				return 28;
+			}
+			else
+			{
+				if(year % 100)
+				{
+					return 29
+				}
+				else
+				{
+					return 28;
+				}
+			}
 		}
 
 		//增加减少月份功能实现
-		document.body.addEventListener("click",function(e){
+		document.body.addEventListener("click",function(e)
+		{
 			var m = _m;
 			var _year = y;
 			var e = e || window.event;
-			if(e.target.id == "reduce"){
+			if(e.target.id == "reduce")
+			{
 				//console.log(0)
-				if(_m > 0){
+				if(_m > 0)
+				{
 					_m -= 1;
-				}else{
+				}
+				else
+				{
 					_m = 12;
 					_year -= 1;
 				}
 				m = _m;
 				loadcalendar(document.body,m,_year);
-			};
-			if(e.target.id == "reduce2"){
-				if(y > 0){
+			}
+			if(e.target.id == "reduce2")
+			{
+				if(y > 0)
+				{
 					y -= 1;
 				}
-				console.log(y)
+				console.log(y);
 				_year = y;
 				loadcalendar(document.body,m,_year);
-			};
-			if(e.target.id == "add"){
+			}
+			if(e.target.id == "add")
+			{
 				//console.log(1)
-				if(_m < 11){
+				if(_m < 11)
+				{
 					_m += 1;
-				}else{
+				}
+				else
+				{
 					_m = 1;
 					y += 1;
 				}
 				m = _m;
 				loadcalendar(document.body,m,_year);
 			}
-			if(e.target.id == "add2"){
-				if(y < 10000){
+			if(e.target.id == "add2")
+			{
+				if(y < 10000)
+				{
 					y += 1;
 				}
-				console.log(y)
+				console.log(y);
 				_year = y;
 				loadcalendar(document.body,m,_year);
 			}
+			if(e.target.id == "topDiv2Add")
+			{
+				var day = e.target.attributes.name.value;
+				if(day != ""){
+					layer.open({
+		                type: 2,
+		                title: '新增',
+		                skin: 'layui-layer-rim',
+		                area: ['100%', '100%'],
+		                content: 'add?date='+ day
+		            });
+				}
+			}
 		});
 		</script>
+		
+        <!-- layui -->
+    	<script th:src="@{/js/layui/plugins/layer/layer.min.js}"></script>
+    	<script th:src="@{/js/layui/layui.js}"></script>
+    	<script th:src="@{/js/layui/layuiUtil.js}"></script>
 	</body>
 </html>
